--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,10 @@ __pycache__
 .amlignore
 *.amltmp
 *.swp
+
+# Added to prevent addition of python virtual environment
+.venv
+
+# Added to prevent addition of vscode artifacts
+.vscode
+
