Update .gitignore to permit local environment Fixes #78

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,15 @@
 .amlignore
 *.amltmp
 *.swp
-.venv
-.vscode
 
+
+
+
+####################################
+# Local environment exclusions
+####################################
+
+# local virtual environment
+.venv
+
+.vscode/
