--- a/obsidian_vault/.obsidian/app.json
+++ b/obsidian_vault/.obsidian/app.json
@@ -1,1 +1,11 @@
-{}
+{
+  "promptDelete": false,
+  "alwaysUpdateLinks": true,
+  "pdfExportSettings": {
+    "includeName": true,
+    "pageSize": "Letter",
+    "landscape": false,
+    "margin": "0",
+    "downscalePercent": 100
+  }
+}
