--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,6 @@ tests/output/
 *.code-workspace
 notebooks/
 .ipynb_checkpoints/
+res/unique_concepts_full.txt
+res/unique_targets.txt
+tests/output*
