Updated pylance settings

--- a/pyrightconfig.json
+++ b/pyrightconfig.json
@@ -8,7 +8,8 @@
     ],
     "exclude": [
         "run/",
-        "res/"
+        "res/",
+        "envs/clever_env"
     ],
     "reportMissingImports": true,
     "reportMissingTypeStubs": false,
